--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 	"preferGlobal": true,
 	"homepage": "https://michaelsogos.github.io/pg-diff/",
 	"bugs": {
-		"url": "https://github.com/michaelsogos/pg-diff/issues",
-		"email": "michael.sogos@gurustudioweb.it"
+		"url": "https://github.com/akrasnov87/pg-diff/issues",
+		"email": "akrasnov87@gmail.com"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/michaelsogos/pg-diff"
+		"url": "https://github.com/akrasnov87/pg-diff"
 	},
 	"engines": {
 		"node": ">=8.11.1"
@@ -38,9 +38,9 @@
 		"tool",
 		"cli"
 	],
-	"author": "Michael Sogos <michael.sogos@gurustudioweb.it> (https://github.com/michaelsogos)",
+	"author": "Aleksandr Krasnov <akrasnov87@gmail.com> (https://github.com/akrasnov87)",
 	"contributors": [
-		"angulion"
+		
 	],
 	"license": "MIT",
 	"dependencies": {
@@ -48,6 +48,6 @@
 		"chalk": "4.1.2",
 		"clui": "0.3.6",
 		"figlet": "1.8.0",
-		"pg-diff-api": "1.5.3"
+		"pg-diff-api": "github:akrasnov87/pg-diff-api#1.5.3"
 	}
 }
